2009-06-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.3
	* Added extra logging for character set conversion
	* Updated Channel Editor and Scan Dialog

2009-06-14  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.2
	* Patched some more code that might potentially hang
	* Fixed debug information when searching for service ID
	* Fullscreen workaround is now turned off by default

2009-06-02  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.1
	* Fix to stop EPG update crashing the application after faulty save (LP: #72872)
	* Fixed spin buttons from GtkBuilder conversion (LP: #382197)
	* Fixed ComboBoxs in preferences dialog
	* Application can now start without a device.

2009-05-24  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.9.0
	* Converted to GtkBuilder

2009-05-24  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.14
	* Fixed icon on application popup menu
	* Not updating EPG when it's not shown
	* Changed "read_timeout" option to "read-timeout"

2009-05-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.13
	* Moved from GNOME to GTK frontend to make the transition to GtkBuilder easier
	* Using read_timeout for tuning lock

2009-05-09  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.12
	* Added option for setting demuxer read timeout 

2009-05-08  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.11
	* Fixed unsupported engines
	* Fix so that the Add button appears for channel import
	* Fix for duplicate channel error when adding channels

2009-05-06  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.10
	* Can now only add unique channel names
	* Fixed up scanner UI to not return channels on cancel
	* Increased timeout to 5 seconds again (LP: #371165)
	* Fixed issue with SQLite parameters not being reset

2009-05-03  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.9
	* Fix so that channels don't persist until channel dialog exits

2009-05-02  Michael Lamothe <michael.lamothe@gmail.com>

	* 0.8.8