@@ -1,5 +1,5 @@
 .pc
-.TH "ME TV" 1 "2009-06-14" "0.9.2" "Me TV Manual"
+.TH "ME TV" 1 "2009-06-15" "0.9.3" "Me TV Manual"
 
 .SH NAME
 me-tv \- a digital television (DVB) viewer for GNOME
